# xct2cli

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: address.rs  error.rs  lib.rs  main.rs  xctrace.rs
src/analysis/: annotate.rs  callgraph.rs  counters.rs  hotspots.rs  mod.rs  pmi.rs  samples.rs
src/render/: annotate.rs  color.rs  mod.rs  text.rs
src/symbol/: macho.rs  mod.rs
src/trace/: mod.rs  toc.rs
src/xml/: mod.rs  schema.rs  stream.rs  value.rs
templates/: L1D_Miss.tracetemplate  l2_miss.tracetemplate
tests/fixtures/: sample-toc.xml  time-sample.xml
